// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrivateLayout/> PrivateLayout snapshots user is on gamegroup page 1`] = `
<div>
  <PrivateHeader />
  <aside
    className="LeftAside"
  />
  <main>
    <Connect(GameGroupContainer) />
  </main>
  <aside
    className="RightAside"
  />
</div>
`;

exports[`<PrivateLayout/> PrivateLayout snapshots user is on gamegroup page 2`] = `
<div>
  <PrivateHeader />
  <aside
    className="LeftAside"
  />
  <main>
    <withRouter(Connect(GameItemContainer)) />
  </main>
  <aside
    className="RightAside"
  />
</div>
`;

exports[`<PrivateLayout/> PrivateLayout snapshots user is on login or signup page 1`] = `
<div>
  <PrivateHeader />
  <aside
    className="LeftAside"
  />
  <main>
    <Feed />
  </main>
  <aside
    className="RightAside"
  />
</div>
`;

exports[`<PrivateLayout/> PrivateLayout snapshots user is on profile page 1`] = `
<div>
  <PrivateHeader />
  <aside
    className="LeftAside"
  />
  <main>
    <Connect(ProfileContainer) />
  </main>
  <aside
    className="RightAside"
  />
</div>
`;
